weechat: open on #vimperator instead of #vim

--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -233,7 +233,7 @@ window = "11;10;0;0;irc;foonetic.#xkcd"
 window = "12;10;0;0;irc;bitlbee.&bitlbee"
 window = "13;9;50;0;-;-"
 window = "14;13;0;0;irc;foonetic.#xkcd-signal"
-window = "15;13;0;0;irc;freenode.#vim"
+window = "15;13;0;0;irc;freenode.#vimperator"
 
 [notify]
 
