playfrom: add script to play remaining files in directory

--- a/.mplayer/input.conf
+++ b/.mplayer/input.conf
@@ -22,6 +22,10 @@ s sub_select
 $ audio_delay -0.100
 & audio_delay 0.100
 
+## Playlist control
+> pt_step 1
+< pt_step -1
+
 ## Control
 f vo_fullscreen
 SPACE pause
