weechat: update git, don't use default foreground for nick coloring

--- a/.weechat/irc_.conf
+++ b/.weechat/irc_.conf
@@ -4,6 +4,7 @@
 
 [look]
 color_nicks_in_server_messages = on
+color_pv_nick_like_channel = on
 display_away = local
 display_channel_modes = on
 display_nick_modes = off
@@ -48,11 +49,6 @@ send_unknown_commands = off
 [ctcp]
 
 [ignore]
-ignore = *;*;^ThirtySeconds$
-ignore = *;*;^Das_Butt$
-ignore = *;*;^mkclass$
-ignore = *;*;^Dolphinsaretasty$
-ignore = *;*;^jizzonhertits$
 
 [server_default]
 addresses = ""
@@ -70,6 +66,9 @@ password = ""
 proxy = ""
 realname = "Lucas de Vries"
 ssl = off
+ssl_cert = ""
+ssl_dhkey_size = 2048
+ssl_verify = on
 username = "GGLucas"
 
 [server]
@@ -89,6 +88,9 @@ freenode.command
 freenode.command_delay
 freenode.autojoin = "#lojban,#archlinux,#archlinux-offtopic,#vim,#newsbeuter,#anime,#vimperator"
 freenode.autorejoin
+freenode.ssl_cert
+freenode.ssl_dhkey_size
+freenode.ssl_verify
 oftc.addresses = "irc.oftc.net"
 oftc.proxy
 oftc.ipv6
@@ -105,6 +107,9 @@ oftc.command
 oftc.command_delay
 oftc.autojoin = "#awesome"
 oftc.autorejoin
+oftc.ssl_cert
+oftc.ssl_dhkey_size
+oftc.ssl_verify
 foonetic.addresses = "irc.foonetic.net"
 foonetic.proxy
 foonetic.ipv6
@@ -121,6 +126,9 @@ foonetic.command
 foonetic.command_delay
 foonetic.autojoin = "#xkcd,#xkcd-signal,#curseofsteel,#aegislore"
 foonetic.autorejoin
+foonetic.ssl_cert
+foonetic.ssl_dhkey_size
+foonetic.ssl_verify
 rizon.addresses = "irc.rizon.net"
 rizon.proxy
 rizon.ipv6
@@ -133,10 +141,13 @@ rizon.nicks
 rizon.username
 rizon.realname
 rizon.local_hostname
-rizon.command = "/msg nickserv identify #########; /join #DLQCT #########"
+rizon.command = "/msg nickserv identify ########; /join #DLQCT #########"
 rizon.command_delay
 rizon.autojoin = "#doremi"
 rizon.autorejoin
+rizon.ssl_cert
+rizon.ssl_dhkey_size
+rizon.ssl_verify
 bitlbee.addresses = "localhost"
 bitlbee.proxy
 bitlbee.ipv6
@@ -153,3 +164,6 @@ bitlbee.command
 bitlbee.command_delay
 bitlbee.autojoin
 bitlbee.autorejoin
+bitlbee.ssl_cert
+bitlbee.ssl_dhkey_size
+bitlbee.ssl_verify
