--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -14,11 +14,12 @@ weechat_slogan = "the geekiest chat client!"
 [look]
 buffer_notify_default = message
 buffer_time_format = "%H:%M"
-color_nicks_number = 10
+color_nicks_number = 8
 color_real_white = off
 day_change = on
 day_change_time_format = "%a, %d %b %Y"
 highlight = ""
+hline_char = "-"
 hotlist_names_count = 3
 hotlist_names_length = 0
 hotlist_names_level = 12
@@ -67,9 +68,9 @@ chat_nick_color02 = magenta
 chat_nick_color03 = green
 chat_nick_color04 = brown
 chat_nick_color05 = lightblue
-chat_nick_color06 = default
-chat_nick_color07 = lightcyan
-chat_nick_color08 = lightmagenta
+chat_nick_color06 = lightcyan
+chat_nick_color07 = lightmagenta
+chat_nick_color08 = lightgreen
 chat_nick_color09 = lightgreen
 chat_nick_color10 = lightblue
 chat_nick_other = cyan
@@ -131,7 +132,7 @@ max_visited_buffers = 50
 [proxy]
 
 [network]
-gnutls_dh_prime_bitsmax_lines = 512
+gnutls_ca_file = "%h/ssl/CAs.pem"
 
 [plugin]
 autoload = "*"
@@ -329,7 +330,6 @@ meta-b = "/window page_up"
 meta-cc = "/input delete_line"
 meta-d = "/input delete_next_word"
 meta-f = "/window page_down"
-#meta-g = "/input insert /buffer #; /input delete_previous_char"
 meta-g = "/go"
 meta-h = "/window left"
 meta-j01 = "/buffer 1"
