weechat: bind M-r to open latest url

--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -439,7 +439,7 @@ meta-k = "/input history_previous"
 meta-l = "/window right"
 meta-n = "/window up"
 meta-p = "/window scroll_previous_highlight"
-meta-r = "/input delete_line"
+meta-r = "/url 1"
 meta-s = "/server switch"
 meta-t = "/window down"
 meta-u = "/input scroll_unread"
