--- a/.weechat/plugins.conf
+++ b/.weechat/plugins.conf
@@ -19,6 +19,6 @@ python.go.color_name_selected = "black,brown"
 python.go.color_number = "yellow,magenta"
 python.go.color_number_selected = "yellow,red"
 python.go.message = "Go: "
-python.go.short_name = "off"
+python.go.short_name = "on"
 ruby.check_license = "on"
 tcl.check_license = "on"
