--- a/.fonts.conf
+++ b/.fonts.conf
@@ -1,32 +1,78 @@
 <?xml version='1.0'?>
 <!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
- <match target="font" >
-  <test compare="more" name="weight" >
-   <const>medium</const>
-  </test>
-  <edit mode="assign" name="autohint" >
-   <bool>false</bool>
-  </edit>
- </match>
- <match target="font" >
-  <edit mode="assign" name="rgba" >
-   <const>none</const>
-  </edit>
- </match>
- <match target="font" >
-  <edit mode="assign" name="hinting" >
-   <bool>true</bool>
-  </edit>
- </match>
- <match target="font" >
-  <edit mode="assign" name="hintstyle" >
-   <const>hintmedium</const>
-  </edit>
- </match>
- <match target="font" >
-  <edit mode="assign" name="antialias" >
-   <bool>true</bool>
-  </edit>
- </match>
+    <!-- Prefered fonts -->
+    <alias>
+        <family>monospace</family>
+        <prefer>
+            <family>Terminus</family>
+            <family>Bitstream Vera Sans Mono</family>
+        </prefer>
+    </alias>
+    <alias>
+        <family>sans-serif</family>
+        <prefer>
+            <family>Bitstream Vera Sans</family>
+        </prefer>
+    </alias>
+    <alias>
+        <family>serif</family>
+        <prefer>
+            <family>Bitstream Vera Serif</family>
+        </prefer>
+    </alias>
+
+    <!-- Hinting settings -->
+    <match target="font">
+        <test compare="more" name="weight">
+            <const>medium</const>
+        </test>
+        <edit mode="assign" name="autohint">
+            <bool>false</bool>
+        </edit>
+    </match>
+    <match target="font">
+        <edit mode="assign" name="rgba">
+            <const>none</const>
+        </edit>
+    </match>
+    <match target="font">
+        <edit mode="assign" name="hinting">
+            <bool>true</bool>
+        </edit>
+    </match>
+    <match target="font">
+        <edit mode="assign" name="hintstyle">
+            <const>hintmedium</const>
+        </edit>
+    </match>
+    <match target="font">
+        <edit mode="assign" name="antialias">
+            <bool>true</bool>
+        </edit>
+    </match>
+
+    <!-- Fonts that shouldn't be autohinted. -->
+    <match target="font">
+        <test name="family">
+            <string>Andale Mono</string>
+            <string>Arial</string>
+            <string>Arial Black</string>
+            <string>Comic Sans MS</string>
+            <string>Georgia</string>
+            <string>Impact</string>
+            <string>Trebuchet MS</string>
+            <string>Verdana</string>
+            <string>Courier New</string>
+            <string>Times New Roman</string>
+            <string>Tahoma</string>
+            <string>Webdings</string>
+        </test>
+        <edit mode="assign" name="hinting">
+            <bool>true</bool>
+        </edit>
+        <edit name="autohint">
+            <bool>false</bool>
+        </edit>
+    </match>
 </fontconfig>
