fonts: explicitly allow terminus as a bitmap

--- a/.fonts.conf
+++ b/.fonts.conf
@@ -1,6 +1,15 @@
 <?xml version='1.0'?>
 <!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
+    <!-- Explicitly allow Terminus -->
+    <selectfont>
+        <acceptfont>
+            <pattern>
+                <patelt name="family"><string>Terminus</string></patelt>
+            </pattern>
+        </acceptfont>
+    </selectfont>
+
     <!-- Prefered fonts -->
     <alias>
         <family>monospace</family>
@@ -21,36 +30,6 @@
             <family>Bitstream Vera Serif</family>
         </prefer>
     </alias>
-
-    <!-- Hinting settings -->
-    <match target="font">
-        <test compare="more" name="weight">
-            <const>medium</const>
-        </test>
-        <edit mode="assign" name="autohint">
-            <bool>false</bool>
-        </edit>
-    </match>
-    <match target="font">
-        <edit mode="assign" name="rgba">
-            <const>none</const>
-        </edit>
-    </match>
-    <match target="font">
-        <edit mode="assign" name="hinting">
-            <bool>true</bool>
-        </edit>
-    </match>
-    <match target="font">
-        <edit mode="assign" name="hintstyle">
-            <const>hintmedium</const>
-        </edit>
-    </match>
-    <match target="font">
-        <edit mode="assign" name="antialias">
-            <bool>true</bool>
-        </edit>
-    </match>
 
     <!-- Fonts that shouldn't be autohinted. -->
     <match target="font">
