--- a/.fonts.conf
+++ b/.fonts.conf
@@ -31,6 +31,38 @@
         </prefer>
     </alias>
 
+    <!-- Don't autohint bold fonts -->
+    <match target="font" >
+        <test compare="more" name="weight" >
+            <const>medium</const>
+        </test>
+        <edit mode="assign" name="autohint" >
+            <bool>false</bool>
+        </edit>
+    </match>
+    
+    <!-- Settings for all fonts -->
+    <match target="font" >
+        <!-- No subpixel smoothing -->
+        <edit mode="assign" name="rgba" >
+            <const>none</const>
+        </edit>
+
+        <!-- Always hint medium -->
+        <edit mode="assign" name="hinting" >
+            <bool>true</bool>
+        </edit>
+
+        <edit mode="assign" name="hintstyle" >
+            <const>hintmedium</const>
+        </edit>
+
+        <!-- Antialias all -->
+        <edit mode="assign" name="antialias" >
+            <bool>true</bool>
+        </edit>
+    </match>
+
     <!-- Fonts that shouldn't be autohinted. -->
     <match target="font">
         <test name="family">
