--- a/.fonts.conf
+++ b/.fonts.conf
@@ -15,21 +15,40 @@
         <family>monospace</family>
         <prefer>
             <family>Terminus</family>
-            <family>Bitstream Vera Sans Mono</family>
+            <family>DejaVu Sans Mono</family>
         </prefer>
     </alias>
     <alias>
         <family>sans-serif</family>
         <prefer>
-            <family>Bitstream Vera Sans</family>
+            <family>DejaVu Sans</family>
         </prefer>
     </alias>
     <alias>
         <family>serif</family>
         <prefer>
-            <family>Bitstream Vera Serif</family>
+            <family>DejaVu Serif</family>
         </prefer>
     </alias>
+    <alias>
+        <family>helvetica</family>
+        <prefer>
+            <family>DejaVu Sans</family>
+        </prefer>
+    </alias>
+
+    <!-- Don't hint small helvetica -->
+	<match target="font">
+		<test name="family">
+			<string>Helvetica</string>
+		</test>
+		<test name="pixelsize" compare="less">
+			<double>12</double>
+		</test>
+		<edit name="hinting">
+			<bool>false</bool>
+		</edit>
+	</match>
 
     <!-- Don't autohint bold fonts -->
     <match target="font" >
