sysconfig: some performance updates

--- a/.sysconfig/desktop/grub.cfg
+++ b/.sysconfig/desktop/grub.cfg
@@ -11,6 +11,6 @@ set default=0
 
 # Arch Linux
 menuentry "Arch Linux" {
-    linux /vmlinuz26 root=/dev/disk/by-label/ArchRoot notsc vga=873 ro
+    linux /vmlinuz26 root=/dev/disk/by-label/ArchRoot fastboot notsc vga=873 ro
     initrd /kernel26.img
 }
