--- a/.weechat/urlgrab.conf
+++ b/.weechat/urlgrab.conf
@@ -13,7 +13,7 @@ color_url_selected = blue
 
 [default]
 historysize = 10
-localcmd = "fxs :0.0 %s"
+localcmd = "fxs :0.0 '%s'"
 method = "local"
 output_main_buffer = on
 remotecmd = "bash -c "DISPLAY=:0.0 firefox %s""
