sysconfig: switch from grub to extlinux

--- a/.sysconfig/desktop/rc.conf
+++ b/.sysconfig/desktop/rc.conf
@@ -88,4 +88,4 @@ ROUTES=(gateway)
 #   - prefix a daemon with a ! to disable it
 #   - prefix a daemon with a @ to start it up in the background
 #
-DAEMONS=(syslog-ng hal network @netfs @xinetd @httpd @mysqld @sshd @crond @samba @alsa @mpd @openntpd @smartd)
+DAEMONS=(syslog-ng network @netfs @xinetd @httpd @mysqld @sshd @crond @samba @alsa @mpd @openntpd @smartd)
