--- a/.sysconfig/desktop/xorg.conf
+++ b/.sysconfig/desktop/xorg.conf
@@ -16,6 +16,8 @@ Section "ServerFlags"
     Option         "StandbyTime" "0"
     Option         "SuspendTime" "0"
     Option         "OffTime" "15"
+
+    Option "AutoAddDevices" "false"
 EndSection
 
 # {{{ Monitors
