weechat: join #heresy on oftc

--- a/.weechat/irc_.conf
+++ b/.weechat/irc_.conf
@@ -105,7 +105,7 @@ oftc.realname
 oftc.local_hostname
 oftc.command
 oftc.command_delay
-oftc.autojoin = "#awesome"
+oftc.autojoin = "#awesome,#heresy"
 oftc.autorejoin
 oftc.ssl_cert
 oftc.ssl_dhkey_size
