--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -226,7 +226,7 @@ window = "3;2;50;0;-;-"
 window = "4;3;0;0;irc;freenode.#anime"
 window = "5;3;0;0;irc;oftc.#awesome"
 window = "6;2;50;0;-;-"
-window = "7;6;0;0;irc;freenode.#archlinux-offtopic"
+window = "7;6;0;0;irc;oftc.#heresy"
 window = "8;6;0;0;irc;freenode.#archlinux"
 window = "9;1;50;1;-;-"
 window = "10;9;50;0;-;-"
