tmux: use vi keys in copy mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,9 @@
 set -g status off
 # Start windows from 1
 set -g base-index 1
+# Vi keys
+set -g status-keys vi
+setw -g mode-keys vi
 
 ## Bindings
 # Use C-t as prefix
