--- a/.sysconfig/desktop/xorg.conf
+++ b/.sysconfig/desktop/xorg.conf
@@ -17,6 +17,7 @@ Section "ServerFlags"
     Option         "SuspendTime" "0"
     Option         "OffTime" "15"
 
+    Option "DontZap" "false"
     Option "AutoAddDevices" "false"
 EndSection
 
