--- a/.sysconfig/desktop/rc.conf
+++ b/.sysconfig/desktop/rc.conf
@@ -36,7 +36,7 @@ USECOLOR="yes"
 #
 MOD_AUTOLOAD="yes"
 #MOD_BLACKLIST=() #deprecated
-MODULES=(fuse !vboxdrv !usblp) #loop
+MODULES=(fuse !vboxdrv !usblp !saa7134_alsa saa7134) #loop
 
 # Scan for LVM volume groups at startup, required if you use LVM
 USELVM="no"
@@ -88,4 +88,4 @@ ROUTES=(gateway)
 #   - prefix a daemon with a ! to disable it
 #   - prefix a daemon with a @ to start it up in the background
 #
-DAEMONS=(syslog-ng network @netfs @xinetd @httpd @mysqld @sshd @crond @samba @alsa @mpd @openntpd @smartd)
+DAEMONS=(syslog-ng network @netfs @xinetd @sshd @crond @samba @alsa @mpd @openntpd @smartd)
