--- a/.sysconfig/desktop/rc.conf
+++ b/.sysconfig/desktop/rc.conf
@@ -29,14 +29,12 @@ USECOLOR="yes"
 # -----------------------------------------------------------------------
 #
 # MOD_AUTOLOAD: Allow autoloading of modules at boot and when needed
-# MOD_BLACKLIST: Prevent udev from loading these modules
 # MODULES: Modules to load at boot-up. Prefix with a ! to blacklist.
 #
 # NOTE: Use of 'MOD_BLACKLIST' is deprecated. Please use ! in the MODULES array.
 #
 MOD_AUTOLOAD="yes"
-#MOD_BLACKLIST=() #deprecated
-MODULES=(fuse !vboxdrv !usblp !saa7134_alsa saa7134) #loop
+MODULES=(fuse !floppy !vboxdrv !usblp !saa7134_alsa saa7134)
 
 # Scan for LVM volume groups at startup, required if you use LVM
 USELVM="no"
@@ -68,17 +66,6 @@ INTERFACES=(eth0)
 #
 gateway="default gw 192.168.1.1"
 ROUTES=(gateway)
-#
-# Enable these network profiles at boot-up.  These are only useful
-# if you happen to need multiple network configurations (ie, laptop users)
-#   - set to 'menu' to present a menu during boot-up (dialog package required)
-#   - prefix an entry with a ! to disable it
-#
-# Network profiles are found in /etc/network.d
-#
-# This now requires the netcfg package
-#
-#NETWORKS=(main)
 
 # -----------------------------------------------------------------------
 # DAEMONS
