weechat: add irc.coldfront.net/#achron

--- a/.weechat/irc_.conf
+++ b/.weechat/irc_.conf
@@ -91,6 +91,25 @@ freenode.autorejoin
 freenode.ssl_cert
 freenode.ssl_dhkey_size
 freenode.ssl_verify
+coldfront.addresses = "irc.coldfront.net"
+coldfront.proxy
+coldfront.ipv6
+coldfront.ssl
+coldfront.password
+coldfront.autoconnect
+coldfront.autoreconnect
+coldfront.autoreconnect_delay
+coldfront.nicks
+coldfront.username
+coldfront.realname
+coldfront.local_hostname
+coldfront.command
+coldfront.command_delay
+coldfront.autojoin = "#achron"
+coldfront.autorejoin
+coldfront.ssl_cert
+coldfront.ssl_dhkey_size
+coldfront.ssl_verify
 oftc.addresses = "irc.oftc.net"
 oftc.proxy
 oftc.ipv6
