--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -94,7 +94,9 @@ hi BufTab padding-left: 5px; padding-right: 5px;
 hi BufTabSelected background: #343434; padding-left: 5px; padding-right: 5px;
 
 " Hint font size
-hi -append Hint font-size: 12px !important;
+hi Hint font-family: monospace; font-size: 13px; font-weight: bold; color: white; padding: 1px 3px; background: #744E7A;
+hi HintElem none: none;
+hi HintActive color: white; background: #4E747A;
 
 " Statusbar and commandline styling
 hi StatusLine background: #141414; color: #9FBC00; font-family: terminus; font-size: 10pt; font-weight: normal;
