weechat: don't save config on quit, don't notify from server buffers

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,7 +38,7 @@ bind h new-window
 bind k confirm-before kill-window
 
 # Create all windows
-new -d -s irc weechat-temp
+new -d -s irc weechat-curses
 new -d -s rss newsbeuter
 new -d -s mpd ncmpcpp
 new -d -s dl rtor
