--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -45,8 +45,8 @@ prefix_network = "--"
 prefix_quit = "<--"
 prefix_suffix = "|"
 read_marker = dotted-line
-save_config_on_exit = on
-save_layout_on_exit = all
+save_config_on_exit = off
+save_layout_on_exit = none
 scroll_amount = 3
 scroll_page_percent = 100
 search_text_not_found_alert = on
@@ -139,7 +139,7 @@ autoload = "*"
 debug = off
 extension = ".so"
 path = "%h/plugins"
-save_config_on_unload = on
+save_config_on_unload = off
 
 [bar]
 input.color_bg = default
@@ -202,28 +202,33 @@ title.type = window
 [layout]
 buffer = "core;weechat;1"
 buffer = "irc;server.freenode;1"
+buffer = "irc;server.coldfront;1"
 buffer = "irc;server.oftc;1"
 buffer = "irc;server.foonetic;1"
 buffer = "irc;server.rizon;1"
 buffer = "irc;server.bitlbee;1"
 buffer = "irc;bitlbee.&bitlbee;2"
 buffer = "irc;oftc.#awesome;3"
-buffer = "irc;foonetic.#xkcd;4"
-buffer = "irc;rizon.#doremi;5"
-buffer = "irc;freenode.#lojban;6"
-buffer = "irc;freenode.#archlinux;7"
-buffer = "irc;foonetic.#xkcd-signal;8"
-buffer = "irc;foonetic.#curseofsteel;9"
-buffer = "irc;foonetic.#aegislore;10"
+buffer = "perl;highmon;4"
+buffer = "irc;foonetic.#xkcd;5"
+buffer = "irc;rizon.#dlqct;6"
+buffer = "irc;freenode.#lojban;7"
+buffer = "irc;freenode.#archlinux;8"
+buffer = "irc;rizon.#doremi;9"
+buffer = "irc;foonetic.#xkcd-signal;10"
 buffer = "irc;freenode.#vim;11"
 buffer = "irc;freenode.#newsbeuter;12"
 buffer = "irc;freenode.#anime;13"
 buffer = "irc;freenode.#vimperator;14"
-buffer = "irc;freenode.#archlinux-offtopic;15"
+buffer = "irc;foonetic.#curseofsteel;15"
+buffer = "irc;foonetic.#aegislore;16"
+buffer = "irc;coldfront.#achron;17"
+buffer = "irc;oftc.#heresy;18"
+buffer = "irc;freenode.#archlinux-offtopic;19"
 window = "1;0;50;0;-;-"
 window = "2;1;50;1;-;-"
 window = "3;2;50;0;-;-"
-window = "4;3;0;0;irc;oftc.#heresy"
+window = "4;3;0;0;irc;freenode.#vimperator"
 window = "5;3;0;0;irc;oftc.#awesome"
 window = "6;2;50;0;-;-"
 window = "7;6;0;0;irc;freenode.#anime"
@@ -237,6 +242,12 @@ window = "14;13;0;0;irc;foonetic.#xkcd-signal"
 window = "15;13;0;0;irc;freenode.#vimperator"
 
 [notify]
+irc.server.bitlbee = none
+irc.server.freenode = none
+irc.server.foonetic = none
+irc.server.oftc = none
+irc.server.coldfront = none
+irc.server.rizon = none
 
 [filter]
 irc_smart = on;*;irc_smart_filter;*
