weechat: add toggle nicklist

--- a/.weechat/irc_.conf
+++ b/.weechat/irc_.conf
@@ -15,11 +15,11 @@ item_display_server = buffer_plugin
 nick_completion_smart = speakers
 nick_prefix = ""
 nick_suffix = ""
-notice_as_pv = auto
+notice_as_pv = always
 open_channel_near_server = off
 open_pv_near_server = off
 raw_messages = 256
-server_buffer = merge_with_core
+server_buffer = independent
 show_away_once = on
 smart_filter = on
 smart_filter_delay = 5
