--- a/.weechat/plugins.conf
+++ b/.weechat/plugins.conf
@@ -20,5 +20,7 @@ python.go.color_number = "yellow,magenta"
 python.go.color_number_selected = "yellow,red"
 python.go.message = "Go: "
 python.go.short_name = "on"
+python.toggle_nicklist.action = "show"
+python.toggle_nicklist.buffers = "irc.bitlbee.&bitlbee"
 ruby.check_license = "on"
 tcl.check_license = "on"
