--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -162,12 +162,12 @@ nicklist.color_fg = default
 nicklist.conditions = "nicklist"
 nicklist.filling_left_right = vertical
 nicklist.filling_top_bottom = columns_vertical
-nicklist.hidden = on
+nicklist.hidden = off
 nicklist.items = "buffer_nicklist"
 nicklist.position = right
 nicklist.priority = 200
 nicklist.separator = on
-nicklist.size = 0
+nicklist.size = 15
 nicklist.size_max = 0
 nicklist.type = window
 status.color_bg = blue
@@ -243,10 +243,10 @@ window = "15;13;0;0;irc;freenode.#vimperator"
 
 [notify]
 irc.server.bitlbee = none
-irc.server.freenode = none
-irc.server.foonetic = none
-irc.server.oftc = none
 irc.server.coldfront = none
+irc.server.foonetic = none
+irc.server.freenode = none
+irc.server.oftc = none
 irc.server.rizon = none
 
 [filter]
