weechat: add shortcut for clearing hotlist

--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -12,7 +12,7 @@ display_version = on
 weechat_slogan = "the geekiest chat client!"
 
 [look]
-buffer_notify_default = message
+buffer_notify_default = highlight
 buffer_time_format = "%H:%M"
 color_nicks_number = 8
 color_real_white = off
@@ -110,6 +110,7 @@ status_filter = green
 status_more = yellow
 status_name = white
 status_number = yellow
+status_time = default
 
 [completion]
 default_template = "%(nicks)|%(irc_channels)"
@@ -290,6 +291,7 @@ meta-6 = "/buffer 6"
 meta-7 = "/buffer 7"
 meta-8 = "/buffer 8"
 meta-9 = "/buffer 9"
+meta-/ = "/input hotlist_clear"
 meta-= = "/filter toggle"
 meta-A = "/input move_end_of_line"
 meta-D = "/input delete_end_of_line"
