weechat: update irc config

--- a/.weechat/irc_.conf
+++ b/.weechat/irc_.conf
@@ -7,15 +7,19 @@ color_nicks_in_server_messages = on
 color_pv_nick_like_channel = on
 display_away = local
 display_channel_modes = on
+display_ctcp_blocked = on
+display_ctcp_reply = on
+display_ctcp_unknown = on
 display_nick_modes = off
 display_old_topic = off
 hide_nickserv_pwd = on
 highlight_tags = "irc_privmsg,irc_notice"
 item_display_server = buffer_plugin
+msgbuffer_fallback = current
 nick_completion_smart = speakers
 nick_prefix = ""
 nick_suffix = ""
-notice_as_pv = always
+notice_as_pv = auto
 open_channel_near_server = off
 open_pv_near_server = off
 raw_messages = 256
@@ -34,7 +38,8 @@ message_quit = red
 notice = green
 
 [network]
-anti_flood = 2
+anti_flood_prio_high = 2
+anti_flood_prio_low = 2
 away_check = 0
 away_check_max_nicks = 0
 colors_receive = on
@@ -45,6 +50,8 @@ lag_check = 60
 lag_disconnect = 5
 lag_min_show = 1
 send_unknown_commands = off
+
+[msgbuffer]
 
 [ctcp]
 
@@ -57,7 +64,8 @@ autojoin = ""
 autoreconnect = on
 autoreconnect_delay = 30
 autorejoin = off
-command = "/msg nickserv identify #########"
+autorejoin_delay = 30
+command = "/msg nickserv identify ########"
 command_delay = 0
 ipv6 = off
 local_hostname = ""
@@ -76,6 +84,9 @@ freenode.addresses = "irc.freenode.net"
 freenode.proxy
 freenode.ipv6
 freenode.ssl
+freenode.ssl_cert
+freenode.ssl_dhkey_size
+freenode.ssl_verify
 freenode.password
 freenode.autoconnect
 freenode.autoreconnect
@@ -88,13 +99,14 @@ freenode.command
 freenode.command_delay
 freenode.autojoin = "#lojban,#archlinux,#archlinux-offtopic,#vim,#newsbeuter,#anime,#vimperator"
 freenode.autorejoin
-freenode.ssl_cert
-freenode.ssl_dhkey_size
-freenode.ssl_verify
+freenode.autorejoin_delay
 coldfront.addresses = "irc.coldfront.net"
 coldfront.proxy
 coldfront.ipv6
 coldfront.ssl
+coldfront.ssl_cert
+coldfront.ssl_dhkey_size
+coldfront.ssl_verify
 coldfront.password
 coldfront.autoconnect
 coldfront.autoreconnect
@@ -107,13 +119,14 @@ coldfront.command
 coldfront.command_delay
 coldfront.autojoin = "#achron"
 coldfront.autorejoin
-coldfront.ssl_cert
-coldfront.ssl_dhkey_size
-coldfront.ssl_verify
+coldfront.autorejoin_delay
 oftc.addresses = "irc.oftc.net"
 oftc.proxy
 oftc.ipv6
 oftc.ssl
+oftc.ssl_cert
+oftc.ssl_dhkey_size
+oftc.ssl_verify
 oftc.password
 oftc.autoconnect
 oftc.autoreconnect
@@ -126,13 +139,14 @@ oftc.command
 oftc.command_delay
 oftc.autojoin = "#awesome,#heresy"
 oftc.autorejoin
-oftc.ssl_cert
-oftc.ssl_dhkey_size
-oftc.ssl_verify
+oftc.autorejoin_delay
 foonetic.addresses = "irc.foonetic.net"
 foonetic.proxy
 foonetic.ipv6
 foonetic.ssl
+foonetic.ssl_cert
+foonetic.ssl_dhkey_size
+foonetic.ssl_verify
 foonetic.password
 foonetic.autoconnect
 foonetic.autoreconnect
@@ -145,13 +159,14 @@ foonetic.command
 foonetic.command_delay
 foonetic.autojoin = "#xkcd,#xkcd-signal,#curseofsteel,#aegislore"
 foonetic.autorejoin
-foonetic.ssl_cert
-foonetic.ssl_dhkey_size
-foonetic.ssl_verify
+foonetic.autorejoin_delay
 rizon.addresses = "irc.rizon.net"
 rizon.proxy
 rizon.ipv6
 rizon.ssl
+rizon.ssl_cert
+rizon.ssl_dhkey_size
+rizon.ssl_verify
 rizon.password
 rizon.autoconnect
 rizon.autoreconnect
@@ -160,17 +175,18 @@ rizon.nicks
 rizon.username
 rizon.realname
 rizon.local_hostname
-rizon.command = "/msg nickserv identify ########; /join #DLQCT #########"
+rizon.command = "/msg nickserv identify ########; /join #DLQCT ########"
 rizon.command_delay
 rizon.autojoin = "#doremi"
 rizon.autorejoin
-rizon.ssl_cert
-rizon.ssl_dhkey_size
-rizon.ssl_verify
+rizon.autorejoin_delay
 bitlbee.addresses = "localhost"
 bitlbee.proxy
 bitlbee.ipv6
 bitlbee.ssl
+bitlbee.ssl_cert
+bitlbee.ssl_dhkey_size
+bitlbee.ssl_verify
 bitlbee.password
 bitlbee.autoconnect
 bitlbee.autoreconnect
@@ -183,6 +199,4 @@ bitlbee.command
 bitlbee.command_delay
 bitlbee.autojoin
 bitlbee.autorejoin
-bitlbee.ssl_cert
-bitlbee.ssl_dhkey_size
-bitlbee.ssl_verify
+bitlbee.autorejoin_delay
