--- a/.sysconfig/desktop/extlinux.conf
+++ b/.sysconfig/desktop/extlinux.conf
@@ -1,7 +1,7 @@
 DEFAULT archlinux
 LABEL archlinux
-  KERNEL /vmlinuz26
-  APPEND initrd=/kernel26.img root=/dev/disk/by-label/ArchRoot fastboot notsc vga=873 ro
+  KERNEL /vmlinuz
+  APPEND root=/dev/sdc3 fastboot notsc vga=873 ro
 
 TIMEOUT 0
 PROMPT 0
