--- a/.sysconfig/desktop/rc.conf
+++ b/.sysconfig/desktop/rc.conf
@@ -45,7 +45,7 @@ USELVM="no"
 #
 # HOSTNAME: Hostname of machine. Should also be put in /etc/hosts
 #
-HOSTNAME="GGLucas"
+HOSTNAME="ayu"
 #
 # Use 'ifconfig -a' or 'ls /sys/class/net/' to see all available interfaces.
 #
