--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -201,46 +201,46 @@ title.size_max = 0
 title.type = window
 
 [layout]
-buffer = "core;weechat;1"
-buffer = "irc;server.freenode;1"
-buffer = "irc;server.coldfront;1"
-buffer = "irc;server.oftc;1"
-buffer = "irc;server.foonetic;1"
-buffer = "irc;server.rizon;1"
 buffer = "irc;server.bitlbee;1"
 buffer = "irc;bitlbee.&bitlbee;2"
 buffer = "irc;oftc.#awesome;3"
-buffer = "perl;highmon;4"
+buffer = "irc;server.rizon;4"
 buffer = "irc;foonetic.#xkcd;5"
 buffer = "irc;rizon.#dlqct;6"
 buffer = "irc;freenode.#lojban;7"
 buffer = "irc;freenode.#archlinux;8"
-buffer = "irc;rizon.#doremi;9"
-buffer = "irc;foonetic.#xkcd-signal;10"
+buffer = "irc;server.foonetic;9"
+buffer = "perl;highmon;10"
 buffer = "irc;freenode.#vim;11"
 buffer = "irc;freenode.#newsbeuter;12"
 buffer = "irc;freenode.#anime;13"
 buffer = "irc;freenode.#vimperator;14"
-buffer = "irc;foonetic.#curseofsteel;15"
-buffer = "irc;foonetic.#aegislore;16"
-buffer = "irc;coldfront.#achron;17"
-buffer = "irc;oftc.#heresy;18"
-buffer = "irc;freenode.#archlinux-offtopic;19"
+buffer = "irc;rizon.#doremi;15"
+buffer = "irc;foonetic.#xkcd-signal;16"
+buffer = "irc;server.oftc;17"
+buffer = "irc;server.coldfront;18"
+buffer = "irc;server.freenode;19"
+buffer = "core;weechat;20"
+buffer = "irc;coldfront.#achron;21"
+buffer = "irc;foonetic.#curseofsteel;22"
+buffer = "irc;freenode.#archlinux-offtopic;23"
+buffer = "irc;foonetic.#aegislore;24"
+buffer = "irc;oftc.#heresy;25"
 window = "1;0;50;0;-;-"
 window = "2;1;50;1;-;-"
 window = "3;2;50;0;-;-"
-window = "4;3;0;0;irc;freenode.#vimperator"
+window = "4;3;0;0;irc;oftc.#heresy"
 window = "5;3;0;0;irc;oftc.#awesome"
 window = "6;2;50;0;-;-"
-window = "7;6;0;0;irc;freenode.#anime"
+window = "7;6;0;0;irc;freenode.#vimperator"
 window = "8;6;0;0;irc;freenode.#archlinux"
 window = "9;1;50;1;-;-"
 window = "10;9;50;0;-;-"
 window = "11;10;0;0;irc;foonetic.#xkcd"
-window = "12;10;0;0;irc;bitlbee.&bitlbee"
+window = "12;10;0;0;irc;freenode.#anime"
 window = "13;9;50;0;-;-"
 window = "14;13;0;0;irc;foonetic.#xkcd-signal"
-window = "15;13;0;0;irc;freenode.#vimperator"
+window = "15;13;0;0;irc;bitlbee.&bitlbee"
 
 [notify]
 irc.server.bitlbee = none
@@ -281,6 +281,7 @@ ctrl-U = "/input delete_beginning_of_line"
 ctrl-W = "/input delete_previous_word"
 ctrl-X = "/input delete_next_char"
 ctrl-Y = "/input clipboard_paste"
+meta-/ = "/input hotlist_clear"
 meta-0 = "/buffer 10"
 meta-1 = "/buffer 1"
 meta-2 = "/buffer 2"
@@ -291,10 +292,10 @@ meta-6 = "/buffer 6"
 meta-7 = "/buffer 7"
 meta-8 = "/buffer 8"
 meta-9 = "/buffer 9"
-meta-/ = "/input hotlist_clear"
 meta-= = "/filter toggle"
 meta-A = "/input move_end_of_line"
 meta-D = "/input delete_end_of_line"
+meta-G = "/go"
 meta-I = "/input move_beginning_of_line"
 meta-Oa = "/input history_global_previous"
 meta-Ob = "/input history_global_next"
@@ -343,7 +344,7 @@ meta-b = "/window page_up"
 meta-cc = "/input delete_line"
 meta-d = "/input delete_next_word"
 meta-f = "/window page_down"
-meta-g = "/go"
+meta-g = "/go -window"
 meta-h = "/window left"
 meta-j01 = "/buffer 1"
 meta-j02 = "/buffer 2"
