--- a/.htoprc
+++ b/.htoprc
@@ -2,7 +2,7 @@
 # The parser is also very primitive, and not human-friendly.
 # (I know, it's in the todo list).
 fields=0 48 18 39 46 47 1 
-sort_key=47
+sort_key=46
 sort_direction=1
 hide_threads=0
 hide_kernel_threads=0
@@ -11,12 +11,12 @@ shadow_other_users=0
 highlight_base_name=1
 highlight_megabytes=1
 highlight_threads=1
-tree_view=1
+tree_view=0
 header_margin=1
 detailed_cpu_time=0
 color_scheme=0
 delay=15
 left_meters=AllCPUs CPU 
 left_meter_modes=1 1 
-right_meters=Memory LoadAverage 
-right_meter_modes=1 2 
+right_meters=Memory LoadAverage Tasks 
+right_meter_modes=1 2 2 
