updates for new heresy install

--- a/.sysconfig/desktop/extlinux.conf
+++ b/.sysconfig/desktop/extlinux.conf
@@ -1,7 +1,7 @@
-DEFAULT archlinux
-LABEL archlinux
+DEFAULT heresy
+LABEL heresy
   KERNEL /vmlinuz
-  APPEND root=/dev/sdc3 fastboot notsc vga=873 ro
+  APPEND root=/dev/sda2 fastboot notsc vga=865 ro
 
 TIMEOUT 0
 PROMPT 0
