--- a/.sysconfig/desktop/sysctl.conf
+++ b/.sysconfig/desktop/sysctl.conf
@@ -11,8 +11,8 @@ kernel.sysrq = 1
 # Enable TCP SYN Cookie Protection
 net.ipv4.tcp_syncookies = 1
 
-# Small swappiness
-vm.swappiness = 1
+# No swap
+vm.swappiness = 0
 
 # Small cache pressure
 vm.vfs_cache_pressure = 30
