--- a/.weechat/logger.conf
+++ b/.weechat/logger.conf
@@ -1,5 +1,5 @@
 #
-# logger.conf -- weechat v0.3.1-dev
+# logger.conf -- weechat v0.3.2-dev
 #
 
 [look]
@@ -10,7 +10,7 @@ auto_log = on
 info_lines = off
 mask = "$server/$channel"
 name_lower_case = on
-path = "~/irclogs/"
+path = "/data/others/irclogs/current"
 replacement_char = "_"
 time_format = "%Y-%m-%d %H:%M:%S"
 
