init.conf update

--- a/.sysconfig/desktop/init.conf
+++ b/.sysconfig/desktop/init.conf
@@ -39,10 +39,10 @@ sysinit(){
     ## Set keymap
     loadkeys -q -u "dvp"
 
-    ## Set consoles
-	for i in /dev/tty[0-9]*; do
+    ## Configure consoles
+    for i in /dev/tty[0-9]*; do
         # Use utf-8
-		kbd_mode -u < ${i}
+        kbd_mode -u < ${i}
 
         # Set font
         setfont ter-v16b -C ${i}
