--- a/.sysconfig/desktop/init.conf
+++ b/.sysconfig/desktop/init.conf
@@ -56,7 +56,7 @@ sysinit3(){
     encMount prompt data
 
     ## Start daemons we want to run
-    startbkgd sshd alsa mpd openntpd bitlbee
+    startbkgd sshd alsa mpd openntpd bitlbee crond samba
 
     # Remove useless modules
     modprobe -r saa7134_alsa
