--- a/.weechat/irc_.conf
+++ b/.weechat/irc_.conf
@@ -6,7 +6,7 @@
 color_nicks_in_server_messages = on
 color_pv_nick_like_channel = on
 display_away = local
-display_channel_modes = on
+display_channel_modes = off
 display_ctcp_blocked = on
 display_ctcp_reply = on
 display_ctcp_unknown = on
