--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -143,14 +143,14 @@ path = "%h/plugins"
 save_config_on_unload = off
 
 [bar]
-input.color_bg = default
-input.color_delim = cyan
+input.color_bg = blue
+input.color_delim = lightgreen
 input.color_fg = default
 input.conditions = ""
 input.filling_left_right = vertical
 input.filling_top_bottom = horizontal
 input.hidden = off
-input.items = "[][input_paste],[input_prompt]+(away),[input_search],input_text"
+input.items = "buffer_name,[][input_paste],+(away),[input_search],>,input_text"
 input.position = bottom
 input.priority = 1000
 input.separator = off
@@ -177,7 +177,7 @@ status.color_fg = default
 status.conditions = ""
 status.filling_left_right = vertical
 status.filling_top_bottom = horizontal
-status.hidden = off
+status.hidden = on
 status.items = "buffer_number+:+buffer_name,[lag],[hotlist],completion,scroll"
 status.position = bottom
 status.priority = 500
@@ -191,7 +191,7 @@ title.color_fg = default
 title.conditions = ""
 title.filling_left_right = vertical
 title.filling_top_bottom = horizontal
-title.hidden = off
+title.hidden = on
 title.items = "buffer_title"
 title.position = top
 title.priority = 500
