weechat: display hotlist on highlight

--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -22,7 +22,7 @@ highlight = ""
 hline_char = "-"
 hotlist_names_count = 3
 hotlist_names_length = 0
-hotlist_names_level = 12
+hotlist_names_level = 8
 hotlist_names_merged_buffers = off
 hotlist_short_names = on
 hotlist_sort = group_time_asc
@@ -150,7 +150,7 @@ input.conditions = ""
 input.filling_left_right = vertical
 input.filling_top_bottom = horizontal
 input.hidden = off
-input.items = "buffer_name,[][input_paste],+(away),[input_search],>,input_text"
+input.items = "[hotlist],buffer_name>,[][input_paste],+(away),[input_search],input_text"
 input.position = bottom
 input.priority = 1000
 input.separator = off
