--- a/.weechat/irc_.conf
+++ b/.weechat/irc_.conf
@@ -1,5 +1,5 @@
 #
-# irc.conf -- weechat v0.3.1-dev
+# irc.conf -- weechat v0.3.2-dev
 #
 
 [look]
@@ -27,6 +27,8 @@ server_buffer = independent
 show_away_once = on
 smart_filter = on
 smart_filter_delay = 5
+smart_filter_join = on
+smart_filter_quit = on
 topic_strip_colors = off
 
 [color]
@@ -65,7 +67,7 @@ autoreconnect = on
 autoreconnect_delay = 30
 autorejoin = off
 autorejoin_delay = 30
-command = "/msg nickserv identify ########"
+command = "/msg nickserv identify ###"
 command_delay = 0
 ipv6 = off
 local_hostname = ""
@@ -175,7 +177,7 @@ rizon.nicks
 rizon.username
 rizon.realname
 rizon.local_hostname
-rizon.command = "/msg nickserv identify ########; /join #DLQCT ########"
+rizon.command = "/msg nickserv identify ###; /join #DLQCT ###"
 rizon.command_delay
 rizon.autojoin = "#doremi"
 rizon.autorejoin
