vim: add bisect

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,6 +30,7 @@ bind c attach-session -t rss
 bind r attach-session -t mpd
 bind l attach-session -t dl
 bind / attach-session -t mt
+bind @ attach-session -t rd
 
 bind t next-window
 bind n next-window
@@ -43,3 +44,4 @@ new -d -s rss newsbeuter
 new -d -s mpd ncmpcpp
 new -d -s dl rtor
 new -d -s mt mutt
+new -d -s rd cortex
