weechat: don't notify on highmon

--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -243,12 +243,14 @@ window = "14;13;0;0;irc;foonetic.#xkcd-signal"
 window = "15;13;0;0;irc;bitlbee.&bitlbee"
 
 [notify]
+highmon = none
 irc.server.bitlbee = none
 irc.server.coldfront = none
 irc.server.foonetic = none
 irc.server.freenode = none
 irc.server.oftc = none
 irc.server.rizon = none
+perl.highmon = none
 
 [filter]
 irc_smart = on;*;irc_smart_filter;*
