weechat: show highmon/chanmon split

--- a/.weechat/alias.conf
+++ b/.weechat/alias.conf
@@ -14,7 +14,7 @@ J = "join"
 K = "kick"
 KB = "kickban"
 LEAVE = "part"
-M = "msg"
+m = "/q -server bitlbee"
 msg = "q"
 MUB = "unban *"
 N = "names"
