--- a/.weechat/plugins.conf
+++ b/.weechat/plugins.conf
@@ -5,11 +5,28 @@
 [var]
 fifo.fifo = "on"
 lua.check_license = "on"
+perl.chanmon.alignment = "channel"
+perl.chanmon.bitlbee.&bitlbee = "on"
+perl.chanmon.color_buf = "on"
+perl.chanmon.dynamic = "on"
+perl.chanmon.foonetic.#curseofsteel = "on"
+perl.chanmon.foonetic.#xkcd = "on"
+perl.chanmon.foonetic.#xkcd-signal = "on"
+perl.chanmon.freenode.#anime = "on"
+perl.chanmon.freenode.#archlinux = "on"
+perl.chanmon.freenode.#lojban = "on"
+perl.chanmon.freenode.#vimperator = "on"
+perl.chanmon.nick_prefix = "<"
+perl.chanmon.nick_suffix = ">"
+perl.chanmon.short_names = "on"
+perl.chanmon.show_aways = "off"
 perl.check_license = "on"
 perl.highmon.alignment = "channel"
 perl.highmon.away_only = "off"
 perl.highmon.color_buf = "on"
 perl.highmon.hotlist_show = "off"
+perl.highmon.nick_prefix = "<"
+perl.highmon.nick_suffix = ">"
 perl.highmon.short_names = "on"
 python.check_license = "on"
 python.go.color_name = "black,cyan"
