--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -51,6 +51,7 @@ scroll_amount = 3
 scroll_page_percent = 100
 search_text_not_found_alert = on
 set_title = on
+time_format = "%a, %d %b %Y %T"
 
 [color]
 bar_more = lightmagenta
@@ -204,28 +205,28 @@ title.type = window
 buffer = "irc;server.bitlbee;1"
 buffer = "irc;bitlbee.&bitlbee;2"
 buffer = "irc;oftc.#awesome;3"
-buffer = "irc;server.rizon;4"
+buffer = "core;weechat;4"
 buffer = "irc;foonetic.#xkcd;5"
-buffer = "irc;rizon.#dlqct;6"
-buffer = "irc;freenode.#lojban;7"
-buffer = "irc;freenode.#archlinux;8"
-buffer = "irc;server.foonetic;9"
-buffer = "perl;highmon;10"
+buffer = "irc;server.freenode;6"
+buffer = "irc;server.coldfront;7"
+buffer = "irc;rizon.#DLQCT;8"
+buffer = "irc;server.oftc;9"
+buffer = "irc;server.foonetic;10"
 buffer = "irc;freenode.#vim;11"
 buffer = "irc;freenode.#newsbeuter;12"
 buffer = "irc;freenode.#anime;13"
 buffer = "irc;freenode.#vimperator;14"
 buffer = "irc;rizon.#doremi;15"
-buffer = "irc;foonetic.#xkcd-signal;16"
-buffer = "irc;server.oftc;17"
-buffer = "irc;server.coldfront;18"
-buffer = "irc;server.freenode;19"
-buffer = "core;weechat;20"
-buffer = "irc;coldfront.#achron;21"
-buffer = "irc;foonetic.#curseofsteel;22"
-buffer = "irc;freenode.#archlinux-offtopic;23"
+buffer = "irc;freenode.#lojban;16"
+buffer = "irc;freenode.#archlinux;17"
+buffer = "irc;server.rizon;18"
+buffer = "perl;highmon;19"
+buffer = "perl;chanmon;20"
+buffer = "irc;oftc.#heresy;21"
+buffer = "irc;foonetic.#xkcd-signal;22"
+buffer = "irc;coldfront.#achron;23"
 buffer = "irc;foonetic.#aegislore;24"
-buffer = "irc;oftc.#heresy;25"
+buffer = "irc;freenode.#archlinux-offtopic;25"
 window = "1;0;50;0;-;-"
 window = "2;1;50;1;-;-"
 window = "3;2;50;0;-;-"
@@ -237,10 +238,14 @@ window = "8;6;0;0;irc;freenode.#archlinux"
 window = "9;1;50;1;-;-"
 window = "10;9;50;0;-;-"
 window = "11;10;0;0;irc;foonetic.#xkcd"
-window = "12;10;0;0;irc;freenode.#anime"
-window = "13;9;50;0;-;-"
-window = "14;13;0;0;irc;foonetic.#xkcd-signal"
-window = "15;13;0;0;irc;bitlbee.&bitlbee"
+window = "12;10;20;0;-;-"
+window = "13;12;0;0;irc;bitlbee.&bitlbee"
+window = "14;12;50;1;-;-"
+window = "15;14;0;0;perl;chanmon"
+window = "16;14;0;0;perl;highmon"
+window = "17;9;50;0;-;-"
+window = "18;17;0;0;irc;foonetic.#xkcd-signal"
+window = "19;17;0;0;irc;freenode.#anime"
 
 [notify]
 highmon = none
